# rtd-tutorial2

./: .readthedocs.yaml  pyproject.toml
docs/source/: conf.py  index.rst
