[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme==1.3.0rc1",
  ]
